welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: not found: value getColorSol
  } else if (getColorSol()==Color.green){
             ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (getColorSol()==Color.green){
         ^